[navigation]-[fix]: for mobile
- don't allow nested items to wrap
- fixes issue where some words were being cut off on mobile
- also compensate spacing for the border left on the right with padding

--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -60,8 +60,9 @@
 
     &--nested {
       border-left: 2px solid transparent;
-      padding: 5px 5px 5px 8px;
+      padding: 5px 7px 5px 8px;
       display: block;
+      white-space: nowrap;
     }
 
     &.accordion__title {
